@@ -237,6 +237,16 @@ function panelizer_update_dependencies() {
     'panels' => 7302,
   );
 
+  // These updates requires Panels storage support, which was added in
+  // panels_update_7305.
+  $dependencies['panelizer'][7302] = array(
+    'panels' => 7305,
+  );
+  $dependencies['panelizer'][7303] = array(
+    'panels' => 7305,
+  );
+
+
   return $dependencies;
 }
 
@@ -1219,5 +1229,104 @@ function panelizer_update_7301() {
   }
   else {
     return t('There was already an index on the {panelizer_entity} table for the revision_id column, so nothing was done.');
+  }
+}
+
+/**
+ * Set the storage type and ID on existing {panelizer_default} records.
+ */
+function panelizer_update_7302(&$sandbox) {
+  if (!isset($sandbox['progress'])) {
+    // Initialize batch update information.
+    $sandbox['progress'] = (float)0;
+    $sandbox['current_did'] = -1;
+    $sandbox['max'] = db_query("SELECT COUNT(pd.did)
+      FROM {panels_display} pd
+        JOIN {panelizer_defaults} p ON p.did = pd.did
+      WHERE pd.storage_type = ''")->fetchField();
+    if (empty($sandbox['max'])) {
+      return t('Nothing to be fixed in Panelizer update 7302.');
+    }
+  }
+
+  // Set a limit of how many rows to process per batch. 1000 rows is probably
+  // good.
+  $limit = 1000;
+
+  // Run the query
+  $result = db_query_range("SELECT pd.did, p.name
+    FROM {panels_display} pd
+      JOIN {panelizer_defaults} p ON p.did = pd.did
+    WHERE pd.storage_type = '' AND pd.did > :current_did", 0, $limit, array(':current_did' => $sandbox['current_did']));
+
+  foreach ($result as $row) {
+    db_update('panels_display')
+      ->fields(array(
+        'storage_type' => 'panelizer_default',
+        'storage_id' => $row->name,
+      ))
+      ->condition('did', $row->did)
+      ->execute();
+
+    // Update our progress information.
+    $sandbox['progress']++;
+    $sandbox['current_did'] = $row->did;
+  }
+
+  // Set the "finished" status, to tell batch engine whether this function
+  // needs to run again.
+  $sandbox['#finished'] = ($sandbox['progress'] >= $sandbox['max']) ? TRUE : ($sandbox['progress'] / $sandbox['max']);
+
+  if ($sandbox['#finished']) {
+    return t('Added the storage type for panelizer_defaults to relevant panels displays');
+  }
+}
+
+/**
+ * Set the storage type and ID on existing {panelizer_entity} records.
+ */
+function panelizer_update_7303(&$sandbox) {
+  if (!isset($sandbox['progress'])) {
+    // Initialize batch update information.
+    $sandbox['progress'] = (float)0;
+    $sandbox['current_did'] = -1;
+    $sandbox['max'] = db_query("SELECT COUNT(pd.did)
+      FROM {panels_display} pd
+        JOIN {panelizer_entity} p ON p.did = pd.did
+      WHERE pd.storage_type = ''")->fetchField();
+    if (empty($sandbox['max'])) {
+      return t('Nothing to be fixed in Panelizer update 7303.');
+    }
+  }
+
+  // Set a limit of how many rows to process per batch.
+  $limit = 1000;
+
+  // Look for records to be updated.
+  $result = db_query_range("SELECT pd.did, p.entity_type, p.entity_id, p.view_mode
+    FROM {panels_display} pd
+      JOIN {panelizer_entity} p ON p.did = pd.did
+    WHERE pd.storage_type = '' AND pd.did > :current_did", 0, $limit, array(':current_did' => $sandbox['current_did']));
+
+  foreach ($result as $row) {
+    db_update('panels_display')
+      ->fields(array(
+        'storage_type' => 'panelizer_entity',
+        'storage_id' => implode(':', array($row->entity_type, $row->entity_id, $row->view_mode)),
+      ))
+      ->condition('did', $row->did)
+      ->execute();
+
+    // Update our progress information.
+    $sandbox['progress']++;
+    $sandbox['current_did'] = $row->did;
+  }
+
+  // Set the "finished" status, to tell batch engine whether this function
+  // needs to run again.
+  $sandbox['#finished'] = ($sandbox['progress'] >= $sandbox['max']) ? TRUE : ($sandbox['progress'] / $sandbox['max']);
+
+  if ($sandbox['#finished']) {
+    return t('Added the storage type for panelizer_entities to relevant panels displays');
   }
 }
