@@ -445,6 +445,9 @@ function panelizer_ctools_plugin_directory($module, $plugin) {
   if (in_array($module, array('panelizer', 'ctools', 'page_manager'))) {
     return 'plugins/' . $plugin;
   }
+  if ($module == 'panels' && $plugin == 'panels_storage') {
+    return 'plugins/' . $plugin;
+  }
 }
 
 /**
@@ -1063,6 +1066,7 @@ function panelizer_node_type_load($name) {
  */
 function panelizer_export_save_callback(&$object) {
   if (!empty($object->display)) {
+    $object->display->storage_id = $object->name;
     // First write the display.
     panels_save_display($object->display);
 
@@ -1260,6 +1264,14 @@ function panelizer_panels_cache_get($argument) {
     if (!empty($get_default)) {
       $panelizer = $handler->get_default_panelizer_object($bundle, $name);
       $cache->display->context = $handler->get_contexts($panelizer);
+
+      // Set the storage_type and storage_id if either is empty.
+      if (empty($cache->display->storage_type)) {
+        $cache->display->storage_type = 'panelizer_default';
+      }
+      if (empty($cache->display->storage_id)) {
+        $cache->display->storage_id = $panelizer->name;
+      }
     }
     else {
       $conditions = (isset($vid) ? array('vid' => $vid) : array());
@@ -1280,6 +1292,14 @@ function panelizer_panels_cache_get($argument) {
     $panelizer = $handler->get_default_panelizer_object($bundle, $name);
     $cache->display = $panelizer->display;
     $cache->display->context = $handler->get_contexts($panelizer);
+    
+    // Set the storage_type and storage_id if either is empty.
+     if (empty($cache->display->storage_type)) {
+       $cache->display->storage_type = 'panelizer_default';
+     }
+     if (empty($cache->display->storage_id)) {
+       $cache->display->storage_id = $panelizer->name;
+     }
   }
   else {
     $conditions = (isset($vid) ? array('vid' => $vid) : array());
